--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,13 +3,14 @@
 :root {
   --background: #ffffff;
   --foreground: #171717;
+  --primary: #320952;
+  --primaryB: #2c0a46;
+  --modal: #1F2937;
 }
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+@theme {
+  --primary: var(--primary);
+  --modal: var(--modal);
 }
 
 @media (prefers-color-scheme: dark) {
@@ -24,3 +25,6 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+.bg-primary { background-color: var(--primaryB); }
+.bg-modal { background-color: var(--modal); }
