--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,16 +1,22 @@
-@import "tailwindcss";
+@import 'tailwindcss';
 
 :root {
   --background: #ffffff;
   --foreground: #171717;
   --primary: #320952;
   --primaryB: #2c0a46;
-  --modal: #1F2937;
+  --modal: #1f2937;
 }
 
 @theme {
-  --primary: var(--primary);
-  --modal: var(--modal);
+  --color-primary: #320952;
+  --color-primary-b: #2c0a46;
+  --color-modal: #1f2937;
+  --color-light-blue: #31c6a4;
+  --color-title: #3C787E;
+
+  --shadow-glow-light: 0 0 10px 1px var(--color-light-blue);
+  --shadow-glow-light-soft: 0 0 5px 5px var(--color-light-blue);
 }
 
 @media (prefers-color-scheme: dark) {
@@ -26,5 +32,34 @@ body {
   font-family: Arial, Helvetica, sans-serif;
 }
 
-.bg-primary { background-color: var(--primaryB); }
-.bg-modal { background-color: var(--modal); }
+/* Para la parte de proyectos */
+
+html,
+body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+}
+
+.scroll-container::-webkit-scrollbar {
+  display: none;
+}
+.scroll-container {
+  -ms-overflow-style: none; /* IE y Edge */
+  scrollbar-width: none; /* Firefox */
+}
+
+.bg-primary {
+  background-color: var(--primaryB);
+}
+.bg-modal {
+  background-color: var(--modal);
+}
+.bg-gradient-violet {
+  background: linear-gradient(
+    120deg,
+    rgba(44, 10, 70, 1) 0%,
+    rgba(0, 0, 0, 1) 100%
+  );
+}
+
