cambios en colores y animaciones y modularizacion en componentes

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -17,6 +17,9 @@
 
   --shadow-glow-light: 0 0 10px 1px var(--color-light-blue);
   --shadow-glow-light-soft: 0 0 5px 5px var(--color-light-blue);
+  
+  --shadow-violet-mid: 0 0 20px #8b5cf6;
+  --shadow-violet-big: 0 0 40px #8b5cf6;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -62,4 +65,5 @@ body {
     rgba(0, 0, 0, 1) 100%
   );
 }
+
 
